# mul

./: .gitignore  pyproject.toml
mul/: __init__.py
mul/commands/: train_cli_app.py
mul/criterions/: __init__.py  bce.py
mul/datasets/: celeba.py
mul/models/: __init__.py  resnet18.py
mul/presets/: base_train.yaml
mul/tasks/: __init__.py  bin_class.py
mulproc/commands/: __init__.py  app.py
mulproc/dataset_adapter/: celeba.py  split.py
tests/: add_id.py  check_by_id.py  merge.py  test02.py  test_pd.py  test_resize.py  test_unpack.py
