[project]
name = "machine-unlearning"
requires-python = ">=3.10"

[tool.poetry]
authors = ["MigoXV <1695587905@qq.com>"]
description = ""
# name = "machine-unlearning"
readme = "README.md"
version = "0.1.0"

[project.optional-dependencies]
cpu = [
  "torch(==2.5.1+cpu)",
  "torchaudio(==2.5.1+cpu)",
  "torchvision(==0.20.1+cpu)",
]
cuda = [
  "torch (==2.5.1+cu121)",
  "torchaudio (==2.5.1+cu121)",
  "torchvision (==0.20.1+cu121)",
]

[[tool.poetry.source]]
name = "pytorch-cpu"
priority = "explicit"
url = "https://download.pytorch.org/whl/cpu"

[[tool.poetry.source]]
name = "pytorch-cuda"
priority = "explicit"
url = "https://download.pytorch.org/whl/cu121"

[tool.poetry.dependencies]
PyYAML = "6.0.2"
numpy = "2.0.1"
python = "^3.10"
torch = [
  {markers = "extra == 'cpu' and extra != 'cuda'", source = "pytorch-cpu"},
  {markers = "extra == 'cuda' and extra != 'cpu'", source = "pytorch-cuda"},
]
torchaudio = [
  {markers = "extra == 'cpu' and extra != 'cuda'", source = "pytorch-cpu"},
  {markers = "extra == 'cuda' and extra != 'cpu'", source = "pytorch-cuda"},
]
torchvision = [
  {markers = "extra == 'cpu' and extra != 'cuda'", source = "pytorch-cpu"},
  {markers = "extra == 'cuda' and extra != 'cpu'", source = "pytorch-cuda"},
]

[[tool.poetry.source]]
name = "mirrors"
priority = "primary"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
